k8s/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stress-test-client
  namespace: stress-test-tool
  labels:
    app: stress-test-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stress-test-client
  template:
    metadata:
      labels:
        app: stress-test-client
    spec:
      containers:
        - name: client
          image: ghcr.io/sharapagorg/sna-stress-test-tool-client:latest
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "200m"
              memory: "256Mi"
            requests:
              cpu: "100m"
              memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: stress-test-client
  namespace: stress-test-tool
spec:
  selector:
    app: stress-test-client
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
