k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stress-test-app
  namespace: stress-test-tool
spec:
  selector:
    app: stress-test-app
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
