k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stress-test-ingress
  namespace: stress-test-tool
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: stress-test-server
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stress-test-client
                port:
                  number: 80
